--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "custom/plugins/zsh-git-prompt"]
 	path = custom/plugins/zsh-git-prompt
 	url = git@github.com:cristianstu/zsh-git-prompt.git
+[submodule "custom/plugins/zsh-completions"]
+	path = custom/plugins/zsh-completions
+	url = https://github.com/zsh-users/zsh-completions.git
